# github-digest

./: .dockerignore  .env  .envrc-example  .gitignore  .tool-versions  README.md  TODO  cli.py  digest.py  digest.yaml  docker-compose.yml  main.py  playground.py  pyproject.toml
.github/workflows/: build_and_publish.yml  sync-metadata.yml
data/: digest.html.j2  digest.yaml
github_digest/: __init__.py  email.py  patch.py  svg.py
