[tool.poetry]
name = "github-digest"
version = "0.1.0"
description = "Create an email digest of activity tied to your GitHub account."
authors = ["Michael Bianco <mike@mikebian.co>"]
keywords = ["github", "email", "digest"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.7"
markdown2 = "^2.5.0"
pygithub = "^2.3.0"
dinghy = "^1.3.2"
apscheduler = "^3.10.4"
backoff = "^2.2.1"
python-decouple-typed = "^3.11.0"
css-inline = "^0.14.1"
beautifulsoup4 = "^4.12.3"
cairosvg = "^2.7.1"
patchy = "^2.8.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pyright = "^1.1.375"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
