[tool.poetry]
name = "github-digest"
version = "0.1.0"
description = "Create an email digest of activity tied to your GitHub account."
authors = ["Michael Bianco <mike@mikebian.co>"]
keywords = ["github", "email", "digest"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
click = "^8.1.8"
pygithub = "^2.5.0"
dinghy = "^1.3.3"
apscheduler = "^3.11.0"
backoff = "^2.2.1"
python-decouple-typed = "^3.11.0"
css-inline = "^0.14.6"
beautifulsoup4 = "^4.12.3"
cairosvg = "^2.7.1"
patchy = "^2.9.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
pyright = "^1.1.393"
pylint = "^3.3.2"
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
github-digest = "github_digest:cli"

[tool.isort]
profile = "black"
# helpful when copy/pasting GPT code
float_to_top = true
multi_line_output = 3
