[tool.poetry]
name = "github-digest"
version = "0.1.0"
description = "Create an email digest of activity tied to your GitHub account."
authors = ["Michael Bianco <mike@mikebian.co>"]
keywords = ["github", "email", "digest"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
click = "^8.3.1"
pygithub = "^2.8.1"
dinghy = "^1.4.1"
apscheduler = "^3.11.2"
backoff = "^2.2.1"
python-decouple-typed = "^3.11.0"
css-inline = "^0.19.1"
beautifulsoup4 = "^4.14.3"
cairosvg = "^2.8.2"
patchy = "^2.10.0"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.12.0"
pyright = "^1.1.408"
pylint = "^4.0.4"
deptry = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
github-digest = "github_digest:cli"

[tool.isort]
profile = "black"
# helpful when copy/pasting GPT code
float_to_top = true
multi_line_output = 3
